force-app/main/default/objects/Funding__c/Funding__c.object-meta.xml
<CustomObject>
    <label>Funding</label>
    <nameField>
        <displayFormat>F-{000000}</displayFormat>
        <label>Funding Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>