force-app/main/default/objects/Funding__c/fields/Other_Source_Details__c.field-meta.xml
<CustomField>
    <fullName>Other_Source_Details__c</fullName>
    <label>Other Source Details</label>
    <type>TextArea</type>
</CustomField>