force-app/main/default/objects/Funding__c/fields/Settlement_Type__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Type__c</fullName>
    <label>Settlement Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Source__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Court ordered</fullName>
            </value>
            <value>
                <fullName>Alimony</fullName>
            </value>
            <value>
                <fullName>Annuity Payment</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>