force-app/main/default/objects/Funding__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inheritance</fullName>
            </value>
            <value>
                <fullName>Sale of a Home</fullName>
            </value>
            <value>
                <fullName>Savings</fullName>
            </value>
            <value>
                <fullName>Settlement</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>