force-app/main/default/objects/Funding__c/fields/Trust__c.field-meta.xml
<CustomField>
    <fullName>Trust__c</fullName>
    <label>Trust</label>
    <referenceTo>Trust__c</referenceTo>
    <relationshipLabel>Funding</relationshipLabel>
    <relationshipName>Funding</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>