force-app/main/default/objects/Funding__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Beneficiary__c</columns>
    <columns>Amount__c</columns>
    <columns>Type__c</columns>
    <columns>Date__c</columns>
    <columns>Settlement_Type__c</columns>
    <columns>Source__c</columns>
    <columns>Other_Source_Details__c</columns>
    <columns>Trust__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>